<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/tvTitulo1"
            android:textAlignment="center"
            android:textSize="34sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:padding="5dp"
            android:src="@drawable/logo_nutriapp" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUsuario" />

        <EditText
            android:id="@+id/etUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPass" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chbxRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/chbxRemember" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/aqua"
                android:shadowColor="@color/black"
                android:text="@string/btnEntrar"
                android:textColor="@color/black" />

        </GridLayout>

        <TextView
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRegistro" />

        <TextView
            android:id="@+id/tlRegistro"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tlRegistro"
            android:textColorLink="@color/colorLink" />

    </LinearLayout>
</RelativeLayout>